Config the package

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "cSpell.words": [
-        "Pyconvert"
+        "Henrique",
+        "Matheus",
+        "Ptasinski",
+        "Pyconvert",
+        "pycorvert",
+        "setuptools"
     ]
 }
