--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,24 @@
 [build-system]
-requires = [
-    "setuptools>=54",
-    "wheel"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[project]
+name = "pyconvert"
+version = "0.0.1"
+authors = [
+    {name = "Matheus Henrique Ptasinski Rosa",email = "matheushpr9@gmail.com"},
 ]
-build-backend = "setuptools.build_meta
+description = "Pyconvert is a lib developed with the aim of unifying all the conversion tools a dev might need during development in one place."
+readme = "README.md"
+python_requires = ">=3.7"
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+]
+
+[project.url]
+"Homepage" = "https://github.com/matheushpr9/Pyconvert"
+"Bug Tracker"= "https://github.com/matheushpr9/Pyconvert/issues"
+[options.packages.find]
+where = "modules"
