Fixing some bugs and lauch pyconvert on test.pypi

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
         "Henrique",
         "Matheus",
         "Ptasinski",
-        "Pyconvert",
+        "pyconversor",
         "pycorvert",
         "pypi",
         "setuptools"
