--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
-include pyconvert/modules
-include pyconvert/modules/Node.py
-include pyconvert/modules/Tree.py
+include pyconversor/modules
+include pyconversor/modules/Node.py
+include pyconversor/modules/Tree.py
